// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Box checkGrammar 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkGrammar 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkGrammar 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkGrammar 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkHighlight 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkHighlight 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkHighlight 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkHighlight 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkSpaces 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkSpaces 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkSpaces 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box checkSpaces 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box className 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text my-classname uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 1`] = `
<div>
  <div
    className="color-schema-default uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 2`] = `
<div>
  <div
    className="color-schema-red uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 3`] = `
<div>
  <div
    className="color-schema-red uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 4`] = `
<div>
  <div
    className="color-schema-red-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 5`] = `
<div>
  <div
    className="color-schema-red-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 6`] = `
<div>
  <div
    className="color-schema-green uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 7`] = `
<div>
  <div
    className="color-schema-green uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 8`] = `
<div>
  <div
    className="color-schema-green-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 9`] = `
<div>
  <div
    className="color-schema-green-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 10`] = `
<div>
  <div
    className="color-schema-yellow uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 11`] = `
<div>
  <div
    className="color-schema-yellow uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 12`] = `
<div>
  <div
    className="color-schema-yellow-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 13`] = `
<div>
  <div
    className="color-schema-yellow-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 14`] = `
<div>
  <div
    className="color-schema-purple uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 15`] = `
<div>
  <div
    className="color-schema-purple uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 16`] = `
<div>
  <div
    className="color-schema-purple-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 17`] = `
<div>
  <div
    className="color-schema-purple-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 18`] = `
<div>
  <div
    className="color-schema-brown uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 19`] = `
<div>
  <div
    className="color-schema-brown uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 20`] = `
<div>
  <div
    className="color-schema-brown-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 21`] = `
<div>
  <div
    className="color-schema-brown-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 22`] = `
<div>
  <div
    className="color-schema-orange uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 23`] = `
<div>
  <div
    className="color-schema-orange uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 24`] = `
<div>
  <div
    className="color-schema-orange-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 25`] = `
<div>
  <div
    className="color-schema-orange-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 26`] = `
<div>
  <div
    className="color-schema-cyan uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 27`] = `
<div>
  <div
    className="color-schema-cyan uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 28`] = `
<div>
  <div
    className="color-schema-cyan-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 29`] = `
<div>
  <div
    className="color-schema-cyan-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 30`] = `
<div>
  <div
    className="color-schema-grey uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 31`] = `
<div>
  <div
    className="color-schema-grey uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 32`] = `
<div>
  <div
    className="color-schema-grey-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 33`] = `
<div>
  <div
    className="color-schema-grey-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 34`] = `
<div>
  <div
    className="color-schema-pink uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 35`] = `
<div>
  <div
    className="color-schema-pink uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 36`] = `
<div>
  <div
    className="color-schema-pink-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 37`] = `
<div>
  <div
    className="color-schema-pink-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box colorSchema 38`] = `
<div>
  <div
    className="color-schema-pink uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box content 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  >
    12345
  </div>
</div>
`;

exports[`UU5.Bricks.Box content 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Box content 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Box content 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  >
    12345
  </div>
</div>
`;

exports[`UU5.Bricks.Box controlled 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box controlled 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box controlled 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box controlled 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box default props 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box disableClick 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box disableClick 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box disableClick 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box disableClick 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box disabled 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-disabled uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Box disabled 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box disabled 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box disabled 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-disabled uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Box dynamic 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box dynamic 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box dynamic 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box dynamic 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box example from docKit UU5.Bricks.Box in The box are Icon and Span 1`] = `
<div>
  <div
    className="color-schema-blue-rich color-schema-primary uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-click uu5-common-hover uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    onClick={[Function]}
    style={Object {}}
    title={null}
  >
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-check"
      id="uuID2"
      key="uuID2"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
    <Span
      className={null}
      content=" CLICK ME! Box with infoHeader/infoContent "
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID3"
      ignoreInnerHTML={false}
      key="uuID3"
      mainAttrs={null}
      name={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  </div>
  <Modal
    className="uu5-bricks-box-modal"
    content="This is infoContent from the box"
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header="This is infoHeader from the Box"
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    level={null}
    mainAttrs={null}
    mountContent="onFirstRender"
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</div>
`;

exports[`UU5.Bricks.Box hidden 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-hidden uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box hidden 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box hidden 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box hidden 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-hidden uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box id 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="myId"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box ignoreHTML 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box ignoreHTML 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box ignoreHTML 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box ignoreHTML 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box infoContent 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-click uu5-common-hover uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    onClick={[Function]}
    style={Object {}}
    title={null}
  />
  <Modal
    className="uu5-bricks-box-modal"
    content="Text in opened modal window"
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header="Info"
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    level={null}
    mainAttrs={null}
    mountContent="onFirstRender"
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</div>
`;

exports[`UU5.Bricks.Box infoHeader 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box mainAttrs 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box name 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 5`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 6`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 7`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 8`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 9`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 10`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 11`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 12`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 13`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 14`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 15`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 16`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 17`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 18`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box nestingLevel 19`] = `
<Text
  className="uu5-bricks-box uu5-bricks-text"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Box nestingLevel 20`] = `
<Text
  className="uu5-bricks-box uu5-bricks-text"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Box noIndex 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-noindex uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box noIndex 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box noIndex 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box noIndex 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-noindex uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box pureRender 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box pureRender 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box pureRender 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box pureRender 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box selected 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-selected uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box selected 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box selected 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box selected 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-selected uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box style 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box style 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box style 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box style 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box textCorrector 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box textCorrector 2`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box textCorrector 3`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box textCorrector 4`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</div>
`;

exports[`UU5.Bricks.Box tooltip 1`] = `
<div>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title="My Tooltip"
  />
</div>
`;
